syntax = "proto3";
package ibc.lightclients.corda.v1;

option go_package = "github.com/hyperledger-labs/yui-corda-ibc/go/x/ibc/light-clients/xx-corda/types";
option java_outer_classname = "HostProto";

import "ibc/lightclients/corda/v1/corda-types.proto";
import "google/protobuf/empty.proto";

service HostService {
  // transactions
  rpc CreateHost (google.protobuf.Empty) returns (google.protobuf.Empty);

  // queries
  rpc QueryHost (google.protobuf.Empty) returns (Host);
}

message Host {
  Party notary = 1;
  repeated Party validators = 2;
  StateRef base_id = 3;
  uint64 nextClientSequence = 4;
  uint64 nextConnectionSequence = 5;
  uint64 nextChannelSequence = 6;
  repeated string bank_ids = 7;
}
